--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: eCommerce
   datasource:
-    url: jdbc:mysql://localhost:3306/school_automation
+    url: jdbc:mysql://localhost:3306/e_commerce
     username: root
     password: Nm47ys97n02
     driver-class-name: com.mysql.cj.jdbc.Driver
